--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 before_script:
   - composer self-update
   - composer install
-  - cd tests && composer install
+  - cd tests
 
 script:
-  - ./vendor/bin/phpunit --coverage-text
+  - ../vendor/bin/phpunit --coverage-text
