--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
         "php": ">=5.3.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.5"
+    },
     "autoload": {
         "psr-0": {
             "Phergie": "src"
