--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Phergie": "src"
+            "Phergie\\Irc\\": "src"
         }
     },
     "repositories": [
