--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
 language: php
 
 php:
-  - 5.3.3
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
+  - 7
   - hhvm
+  
+matrix:
+  allow_failures:
+    - php: 7
+    - php: hhvm
 
 before_script:
-  - composer self-update
-  - composer install
+  - travis_retry composer self-update
+  - travis_retry composer install
 
 script:
   - ./vendor/bin/phpunit --coverage-text
