--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         "source": "https://github.com/phergie/phergie-irc-parser"
     },
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.4.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1.*"
+        "phpunit/phpunit": "~4"
     },
     "autoload": {
         "psr-4": {
