--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "source": "https://github.com/phergie/phergie-irc-parser"
     },
     "require": {
-        "php": ">=5.5"
+        "php": "^7.0 || ^5.6"
     },
     "require-dev": {
         "phergie/phergie-irc-bot-react-development": "~1.0.0"
