❄️ Exclude tests from being installed with --prefer-dist
resolves #29

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ composer.phar
 tests/composer.phar
 tests/vendor/*
 vendor/
+
+/tests export-ignore
+.travis.yml export-ignore
+phpunit.xml export-ignore
