--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "abandoned": true,
     "name": "phergie/phergie-irc-parser",
     "description": "Parser for messages conforming to the IRC protocol",
     "keywords": [ "irc", "parser" ],
